welcome.lessons.welcome.bat.bool1.HasTeen.scala.code
def hasTeen(a:Int, b:Int, c:Int): Boolean = 
{
// On dira qu'un nombre est "ado" s'il appartient à l'intervalle [13;19].   
//Étant donné trois nombres entiers, retournez vrai seulement si un ouplusieurs d'entre eux sont ados.

	if
	{
		if((a>12 && a<20)  || ( b>12 && b<20) || (c>12 || c<20) )
		{
		return true
		}

		if((a>12 && a<20) && (b>12 && b<20)
		{
		return true
		}

		if ((a>12 && a<20) && (c>12 && c<20))
		{
		return true
		}

		if ((b>12 && b<20) && (c>12 && c<20))
		{
		return true
		}
	}

	else
	{
	return false
	}

}
	}
